fixing alignment of instructions message and paging

--- a/src/app/containers/quiz/quiz.component.scss
+++ b/src/app/containers/quiz/quiz.component.scss
@@ -18,13 +18,12 @@ mat-card {
       font-style: italic;
       display: flex;
       justify-content: center;
-      margin-top: -10px;
-      margin-bottom: 20px;
+      margin-top: 5px;
     }
 
     .paging {
       width: 640px;
-      margin: -15px auto 24px auto;
+      margin: -50x auto 24px auto;
       box-sizing: border-box;
 
       mat-card-actions {
